src/tests/fixtures/typename/PropertyTypenameMustNeedToBeDeclaredAsExactlyConst.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User {
  __typename = "User" as Foo;
  /** @gqlField */
  name: string = "Alice";
}

type Foo = string;

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/typename/PropertyTypenameMustNeedToBeDeclaredAsExactlyConst.ts:3:26 - error: Expected `__typename` property type name to be "const". For example: `__typename = "User" as const` or `__typename: "User";`. This is needed to ensure Grats can determine the type of this object during GraphQL execution.

3   __typename = "User" as Foo;
                           ~~~


-- Code Action: "Create Grats-compatible `__typename` property" (fix-typename-property) --
- Original
+ Fixed

@@ -2,3 +2,3 @@
  export class User {
-   __typename = "User" as Foo;
+   __typename = "User" as const;
    /** @gqlField */